# Rudolph

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  add_day.ps1  mypy.ini  pyproject.toml  requirements.txt
src/: app.py  main.py
src/config/: logger.yml
src/solutions/: template.py
src/solutions/2015/: day01.py
src/solutions/2021/: day01.py  day02.py  day03.py  day09.py
src/solutions/2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day18.py  day19.py  day20.py  day21.py
src/solutions/y2015/: day01.py  day02.py
src/solutions/y2021/: day01.py  day02.py  day03.py
src/solutions/y2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
src/solutions/y2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
src/utils/: decorators.py  solver.py
